# open_avatar

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.default  Dockerfile.local  MIGRATION.md  NOTICE  PROJECT_INTRO_CN.md  README.md  build_cuda128.sh  docker-compose.runtime-flashhead.yml  docker-compose.runtime-musetalk.yml  docker-compose.yml  pyproject.toml  readme_en.md  run_docker_cuda128.sh
.github/workflows/: deploy-docs.yml
config/: chat_with_lam.yaml  chat_with_lam_bailian_asr_duplex.yaml  chat_with_lam_duplex.yaml  chat_with_openai_compatible.yaml  chat_with_openai_compatible_bailian_cosyvoice.yaml  chat_with_openai_compatible_bailian_cosyvoice_duplex.yaml  chat_with_openai_compatible_bailian_cosyvoice_flashhead.yaml  chat_with_openai_compatible_bailian_cosyvoice_flashhead_duplex.yaml  chat_with_openai_compatible_bailian_cosyvoice_flashhead_duplex_agent.yaml  chat_with_openai_compatible_bailian_cosyvoice_musetalk.yaml  chat_with_openai_compatible_bailian_cosyvoice_musetalk_duplex.yaml  chat_with_openai_compatible_edge_tts.yaml  chat_with_qwen_omni.yaml
coturn-data/: turnserver.conf
docker_build_config/: chat_with_openai_compatible_bailian_cosyvoice.yaml.txt
docs/: FAQ.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/beta/: chat-agent.md  index.md
docs/community/: faq.md  index.md
docs/en/: index.md
docs/en/beta/: chat-agent.md  index.md
docs/en/community/: faq.md  index.md
docs/en/getting-started/: docker.md  flashhead.md  index.md  lam.md  liteavatar.md  musetalk.md
docs/en/guide/: deployment.md  how-it-works.md  introduction.md
docs/en/reference/: configuration.md  preset-modes.md
docs/en/reference/handlers/: index.md
docs/en/releases/: release-notes.md
docs/getting-started/: docker.md  flashhead.md  index.md  lam.md  liteavatar.md  musetalk.md
docs/guide/: deployment.md  how-it-works.md  introduction.md
docs/reference/: configuration.md  preset-modes.md
docs/reference/handlers/: index.md
docs/reference/handlers/agent/: chat-agent.md
docs/reference/handlers/asr/: sensevoice.md
docs/reference/handlers/avatar/: flashhead.md  lam.md  liteavatar.md  musetalk.md
docs/reference/handlers/client/: lam-client.md  rtc-client.md
docs/reference/handlers/llm/: dify.md  (+2 more)
docs/releases/: release-notes.md
extensions/openclaw/oac-bridge/: index.ts  openclaw.plugin.json  package.json
scripts/: download_avatar_model.py  download_liteavatar_weights.sh  download_models.py  download_musetalk_weights.sh  download_smart_turn_weights.sh
src/: demo.py
src/chat_engine/core/: handler_manager.py
src/handlers/analyzer/: __init__.py  analyzer_html_generator.py  analyzer_json_exporter.py  analyzer_models.py  vad_eou_analyzer.py
src/handlers/avatar/flashhead/: avatar_handler_flashhead.py  flashhead_config.py  flashhead_face_crop.py  flashhead_processor.py  pyproject.toml
src/handlers/avatar/musetalk/: ARCHITECTURE.md  avatar_handler_musetalk.py  musetalk_algo.py  musetalk_config.py  musetalk_data_models.py  musetalk_processor.py  musetalk_review.md  musetalk_utils_preprocessing.py  pyproject.toml
src/logics/: latency_profile_logic.py
src/service/frontend_service/: frontend_service.py
windows_scripts/: avatar_start.bat  start_flashhead.bat  start_liteavatar.bat  start_musetalk.bat
(+47 files in other folders)
