[project]
name = "musetalk"
version = "0.1.0"
requires-python = ">=3.10, <3.12"
dependencies = [
    "accelerate~=0.28.0",
    "diffusers~=0.30.2",
    "einops>=0.8.1",
    "ffmpeg-python>=0.2.0",
    "gdown>=5.1.0",
    "huggingface-hub>=0.23.2,<1.0",
    "imageio[ffmpeg]>=2.37.0",
    "librosa~=0.10.2",
    "moviepy>=1.0.3",
    "numpy<=1.26.4",
    "omegaconf>=2.3.0",
    "onnxruntime-gpu>=1.17.0",
    "opencv-python>=4.9.0,<5.0",
    "requests>=2.32.3",
    "soundfile~=0.13.1",
    "tensorboard~=2.16.1",
    "tensorflow~=2.16.1",
    "protobuf>=4.25.3,<5",
    "transformers~=4.44.1",
]

